SFDC DevOps Test/src/objects/Term__c.object
<CustomObject>
    <description>TOOLKIT - used to capture key terms and their details as they relate the project</description>
    <fields>
        <fullName>ADM_Stages__c</fullName>
        <label>ADM Stages</label>
        <picklist>
            <picklistValues>
                <fullName>Analyze</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Build</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deploy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support and Monitoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Content_Type__c</fullName>
        <label>Content Type</label>
        <picklist>
            <picklistValues>
                <fullName>Component</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Document</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tool</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Definition_Link__c</fullName>
        <description>Link to the official or a primary term definition reference. Allows a reference to an official source for greater clarity or drilling into greater details.</description>
        <inlineHelpText>Link to the official or a primary term definition reference. Allows a reference to an official source for greater clarity or drilling into greater details.</inlineHelpText>
        <label>Definition Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Definition__c</fullName>
        <description>Short Definition of term (255 limit). 

Be aware that changing this to a LONG text field negates the ability to edit in a List View. This may limit Term management.</description>
        <inlineHelpText>Short Definition of term (255 limit) 

Required for OFFICIAL Terms</inlineHelpText>
        <label>Definition</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Effort_Savings__c</fullName>
        <label>Effort Savings</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Keywords_New__c</fullName>
        <label>Keywords</label>
        <picklist>
            <picklistValues>
                <fullName>Account Hierarchy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Load</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add to Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adoption</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analyze</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>API</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Freeze</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approval Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approve All</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Archive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Atom Sphere</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attachment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audit Trail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Batch Apex Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beginner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Best Practices</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Birthday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Birthday Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Birthday Wish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boomi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Build</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call Log</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chatter</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Module__c</fullName>
        <label>Module</label>
        <picklist>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Other_Details__c</fullName>
        <description>Used for any additional details or context</description>
        <inlineHelpText>Used for any additional details or context</inlineHelpText>
        <label>Other Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Parent_Term__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to identify the relationship between a Primary terms, and its secondary counterparts</description>
        <inlineHelpText>Used to identify related Primary terms for common secondary terms</inlineHelpText>
        <label>Parent Term</label>
        <referenceTo>Term__c</referenceTo>
        <relationshipLabel>Related Terms</relationshipLabel>
        <relationshipName>Terms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Phase__c</fullName>
        <label>Project Phase</label>
        <picklist>
            <picklistValues>
                <fullName>Analyze</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Build</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deploy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support and Monitoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <description>Used to broadly identify the source of the term. 

Be aware that creating a Field Dependency on this field negates the ability to edit in a List View. This may limit Term management.</description>
        <inlineHelpText>Used to broadly identify the source of the term</inlineHelpText>
        <label>Source</label>
        <picklist>
            <picklistValues>
                <fullName>Industry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salesforce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accenture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Used by the Project Management to indicate which terms are adopted for official use on the project, over their related counterparts.

Be aware that creating a Field Dependency on this field negates the ability to edit in a List View. This may limit Term management.</description>
        <inlineHelpText>Used by the Project Management to indicate which terms are adopted for official use on the project, over their related counterparts.</inlineHelpText>
        <label>Project Usage Status</label>
        <picklist>
            <picklistValues>
                <fullName>Official</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unofficial</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Discouraged</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Technology__c</fullName>
        <label>Technology</label>
        <picklist>
            <picklistValues>
                <fullName>SFDC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Veeva</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workday</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Used to differentiate between different term types. Facilitates searching and cross reference.

Be aware that creating a Field Dependency on this field negates the ability to edit in a List View. This may limit Term management.</description>
        <inlineHelpText>Used to differentiate between different term types. Facilitates searching and cross reference.</inlineHelpText>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Full Name</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Common Usage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Name</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Abbreviation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Term</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Term Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Terms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Official_Term_Definition_Validation</fullName>
        <active>true</active>
        <description>Requires that Terms that have a &quot;Project Usage Status&quot; = &quot;Official&quot; require the &quot;Definition&quot; field to be completed.</description>
        <errorConditionFormula>ISBLANK( Definition__c ) &amp;&amp;  
TEXT (Status__c ) = &quot;Official&quot;</errorConditionFormula>
        <errorDisplayField>Definition__c</errorDisplayField>
        <errorMessage>If the &quot;Project Usage Status&quot; = &quot;Official&quot;, then the &quot;Definition&quot; field must be completed.</errorMessage>
    </validationRules>
</CustomObject>